TestSuite/errors/err0431.pas
//!Неизвестное имя 't1'
unit err0431;

uses err0432;

type
  t3 = class(err0432.t1)
  end;

end.